--- a/web-scraping_ValerieJ.ipynb
+++ b/web-scraping_ValerieJ.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,6 +401,12 @@
     "print(\"\\033[1m\\033[32mTop Five Most Frequent Tokens\\033[0m\")\n",
     "for token, freq in freq_tokens:\n",
     "    print(f\"Token: {token}, Frequency: {freq}\")\n",
+    "\n",
+    "# Print all the tokens and their frequencies\n",
+    "print(\"\\033[1m\\033[32mTokens And Their Frequencies\\033[0m\")\n",
+    "for token, freq in counting_tokens.items():\n",
+    "    print(f\"Token: {token}, Frequency: {freq}\")\n",
+    "    \n",
     "\n",
     "\n"
    ]
@@ -485,12 +491,44 @@
     "import spacy\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
-    "# Define scoring by token\n",
-    "def score_sentence_by_token(sentence, interesting_token):\n",
-    "    doc = nlp(sentence)\n",
+    "# Define scoring by interesting token\n",
+    "def score_sentence_by_token(sentence, interesting_tokens):\n",
+    "    doc = nlp(sentence.lower())\n",
+    "    tokens = [token.text for token in doc if not token.is_punct and not token.is_stop and not token.is_space]\n",
+    "    \n",
+    "    #Count the interesting tokens\n",
+    "    counting_int = sum(1 for token in tokens if token in interesting_tokens)\n",
     "\n",
-    "    #Count the individual tokens\n",
-    "    counting_tokens = \n"
+    "    #Count total words in sentence minus the things we don't care about.\n",
+    "    word_count = len(token for token in doc if not token.is_punct and not token.is_spacec)\n",
+    "\n",
+    "    #Return the score - Number of interesting tokens divided by total words in sentence.\n",
+    "    if word_count > 0:\n",
+    "        return counting_int / word_count\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "# Define scoring by interesting lemmas\n",
+    "def score_sentence_by_lemma(sentence, interesting_lemmas):\n",
+    "    doc = nlp(sentence.lower())\n",
+    "\n",
+    "    # Count the interesting lemmas\n",
+    "    int_lemmacount = sum(1 for token in doc if token.lemma_ in interesting_lemmas)\n",
+    "\n",
+    "    #Count total words\n",
+    "    word_count = len(token for token in doc if not token.is_punct and not token.is_space)\n",
+    "\n",
+    "    #Return the score - Number of interesting lemmas divided by the total words in sentence.\n",
+    "    if word_count >0:\n",
+    "        return int_lemmacount /word_count\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "                       \n"
    ]
   },
   {
@@ -538,9 +576,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (.venv)",
+   "display_name": ".venv",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
