--- a/web-scraping_ValerieJ.ipynb
+++ b/web-scraping_ValerieJ.ipynb
@@ -369,20 +369,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[32mTop Five Most Frequent Tokens\u001b[0m\n",
-      "Token: laser, Frequency: 29\n",
-      "Token: headlights, Frequency: 17\n",
-      "Token: technology, Frequency: 10\n",
-      "Token: headlight, Frequency: 10\n",
-      "Token: LED, Frequency: 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import spaCytextblob\n",
     "from spacytextblob.spacytextblob import SpacyTextBlob\n",
@@ -576,9 +563,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (.venv)",
    "language": "python",
-   "name": "python3"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
