--- a/web-scraping_ValerieJ.ipynb
+++ b/web-scraping_ValerieJ.ipynb
@@ -510,12 +510,12 @@
     "        return int_lemmacount /word_count\n",
     "    else:\n",
     "        return 0\n",
-    "    \n",
     "\n",
+    "# Using the first sentence in the article          \n",
+    "first_sentence = list(doc.sents)[0].text\n",
     "\n",
-    "\n",
-    "\n",
-    "                       \n"
+    "# Identify the interesting tokens\n",
+    "interesting_tokens = [\"\"]"
    ]
   },
   {
@@ -563,9 +563,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (.venv)",
+   "display_name": ".venv",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
